tests/negative/comptime/int_oob.orng
const x: Int8 = 100 + 50
fn main() -> Int8 {
    x
}